# advent-of-code

./: README.md
2024/: Cargo.toml
2024/aoc/: Cargo.toml
2024/aoc/src/: grid.rs  math.rs
2024/day-00/: Cargo.toml
2024/day-01/: Cargo.toml
2024/day-01/benches/: benchmark.rs
2024/day-01/src/: part1.rs  part2.rs
2024/day-02/: Cargo.toml
2024/day-02/benches/: benchmark.rs
2024/day-02/src/: part1.rs  part2.rs
2024/day-03/: Cargo.toml
2024/day-03/benches/: benchmark.rs
2024/day-03/src/: part1.rs  part2.rs
2024/day-04/: Cargo.toml
2024/day-04/benches/: benchmark.rs
2024/day-04/src/: grid.rs  lib.rs  part1.rs  part2.rs
