[workspace]
resolver = "2"
members = [ "aoc","day-*"]

[workspace.dependencies]
glam = "0.29.2"
indicatif = { version = "0.17.7", features = ["rayon"] }
itertools = "0.13.0"
nom = "7.1.3"
rayon = "1.8.0"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
rstest = "0.23.0"
divan = "0.1.3"
tracing-tracy = "0.11.3"
tracy-client = "0.17.4"
tracy-client-sys = "0.24.2"
miette = { version = "7.4.0", features = ["fancy"] }
thiserror = "2.0.4"
dhat = "0.3.2"
env_logger = "0.11.5"
test-log = { version = "0.2.13", features = ["trace"] }
regex = "1.11.1"
memoize = "0.4.1"


[profile.flamegraph]
inherits = "release"
debug = true

[profile.dhat]
inherits = "release"
debug = 1
